fixed scrollbars

--- a/angular-chess/src/app/app.component.scss
+++ b/angular-chess/src/app/app.component.scss
@@ -15,8 +15,6 @@ h3 {
 body,
 html {
   margin: 2em;
-  height: 100%;
-  width: 100%;
 }
 
 body,
