--- a/angular-chess/src/styles.css
+++ b/angular-chess/src/styles.css
@@ -10,7 +10,5 @@
 }
 
 body, html, p-splitter.p-element.background,div.p-splitter.p-component.p-splitter-horizontal {
-  height: 100%;
-  width: 100%;
   background-color: #123619;
 }
